<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">货品流通系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">打开蓝牙</string>
    <string name="checkdevice">检查设备</string>
    <string name="disableconnect">断开连接</string>
    <string name="lookconndevice">查看配对设备</string>
    <string name="scandevice">扫描设备</string>
    <string name="printword">打印文字</string>
    <string name="sendorder">发送指令</string>
    <string name="busstorage">车内库存</string>
    <string name="salesync">销售同步</string>
    <string name="shopinfo">店面信息</string>

</resources>
