<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#e9ecf3">
    <!-- 顶部栏 -->
    <include 
        layout="@layout/top_title"/>
    
    <LinearLayout 
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/checkButton"
	        android:text="@string/checkdevice"/>
	    
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/openButton"
	        android:text="@string/action_settings"/>
	    
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/disconnectButton"
	        android:text="@string/disableconnect"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/bt_matches"
	        android:text="@string/lookconndevice"/>
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/bt_scan"
	        android:text="@string/scandevice"/>
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/printButton"
	        android:text="@string/printword"/>
        
    </LinearLayout>
    
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendOrderButton"
        android:text="@string/sendorder"
        android:visibility="gone"/>
    
    
    <ListView
        android:id="@+id/lv_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"/>
    

</LinearLayout>
