<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e9ecf3" >
    <!-- 顶部栏 -->
    <include 
        layout="@layout/top_title"/>
    
    <Button 
        android:id="@+id/discoveryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="蓝牙设备"
        android:visibility="gone"/>
    
    <LinearLayout
        android:layout_marginTop="40dp" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
	        android:id="@+id/busStoreButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:gravity="center"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="@string/busstorage" 
	        android:drawableTop="@drawable/busstore" 
	        android:paddingTop="10.0dip"  
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom" />

	    <Button 
	       	android:id="@+id/saleSyncButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:gravity="center"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="@string/salesync" 
	        android:drawableTop="@drawable/salesync" 
	        android:paddingTop="10.0dip" 
	        android:layout_weight="1.0"
	        android:background="@drawable/bg_bottom"  />
	    
	    <Button 
	        android:id="@+id/shopInfoButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:gravity="center" 
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="@string/shopinfo" 
	        android:drawableTop="@drawable/shopinfo" 
	        android:paddingTop="10dp"
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom"  />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="20dp"  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
	        android:id="@+id/businessClearButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:gravity="center"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="业务结算" 
	        android:drawableTop="@drawable/businessclear" 
	        android:paddingTop="10.0dip"  
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom" />

	    <Button 
	       	android:id="@+id/depotStoreButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:gravity="center"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="仓库库存" 
	        android:drawableTop="@drawable/depotstore" 
	        android:paddingTop="10.0dip" 
	        android:layout_weight="1.0"
	        android:background="@drawable/bg_bottom"  />
	    
	    <Button
	        android:id="@+id/productInfoButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:gravity="center"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="产品信息" 
	        android:drawableTop="@drawable/productinfo" 
	        android:paddingTop="10.0dip"  
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="20dp"  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <Button 
	       	android:id="@+id/saleManResultButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:gravity="center"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="业务员业绩" 
	        android:drawableTop="@drawable/salesmanresult" 
	        android:paddingTop="10.0dip" 
	        android:layout_weight="1.0"
	        android:background="@drawable/bg_bottom"  />
	    
	    <Button 
	        android:id="@+id/storageInfoButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:gravity="center" 
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="库存信息" 
	        android:drawableTop="@drawable/storageinfo" 
	        android:paddingTop="10dp"
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom"  />
	    
	    <Button 
	        android:id="@+id/productStorageButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:gravity="center" 
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="产品入库" 
	        android:drawableTop="@drawable/productstorage" 
	        android:paddingTop="10.0dp"
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom"  
	        android:visibility="invisible"/>
        
    </LinearLayout>
    
</LinearLayout>

